Added multiple controller, commands and queries
