# src/WebUI/Server/Controllers/EmployeeController.cs
@@ -1,0 +1,33 @@
+﻿using Application.Employee.Commands.CreateEmployee;
+using Application.Employee.Queries.GetEmployeeByIdentifier;
+using Domain.Employee;
+using MediatR;
+using Microsoft.AspNetCore.Mvc;
+using Server.Common.Controlling;
+
+namespace Server.Controllers;
+
+[ApiController]
+[Route("[controller]")]
+public sealed class EmployeeController : ApiControllerBase
+{
+    public EmployeeController(IMediator mediator) : base(mediator) { }
+
+    [HttpPost]
+    public async Task<ActionResult> CreateEmployee([FromBody] CreateEmployeeCommand command)
+    {
+        await Mediator.Send(command);
+
+        return Ok();
+    }
+
+    [HttpGet("{identifier}")]
+    public async Task<ActionResult<EmployeeDto>> GetEmployeeByIdentifier(string identifier)
+    {
+        var query = new GetEmployeeByIdentifierQuery { Identifier = identifier };
+
+        var result = await Mediator.Send(query);
+
+        return Ok(result);
+    }
+}
